[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/goal.png" type="Texture" id=1]
[ext_resource path="res://ParkingGoal.gd" type="Script" id=2]
[ext_resource path="res://assets/goal_wait_2.png" type="Texture" id=3]
[ext_resource path="res://assets/goal_wait_1.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "finished",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "waiting",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2, 34 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2, 34 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 5 )

[node name="ParkingGoal" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 23, 38 )
frames = SubResource( 1 )
animation = "waiting"

[node name="TopBorder" type="CollisionShape2D" parent="."]
position = Vector2( 23, 2 )
shape = SubResource( 2 )

[node name="BottomBorder" type="CollisionShape2D" parent="."]
position = Vector2( 23, 74 )
shape = SubResource( 3 )

[node name="LeftBorder" type="CollisionShape2D" parent="."]
position = Vector2( 2, 38 )
shape = SubResource( 4 )

[node name="RightBorder" type="CollisionShape2D" parent="."]
position = Vector2( 44, 38 )
shape = SubResource( 5 )

[node name="Center" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Center"]
position = Vector2( 23, 38 )
shape = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_ParkingGoal_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ParkingGoal_body_exited"]
[connection signal="body_entered" from="Center" to="." method="_on_Center_body_entered"]
[connection signal="body_exited" from="Center" to="." method="_on_Center_body_exited"]
